--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 body {
+    transform: scale(.88);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,14 +31,14 @@ body {
 }
 
 /* CONTAINER STYLES */
-.container {
+/* .container {
     width: 100%;
     max-width: 1440px;
     height: 1024px;
     padding: 5.6rem 10.3rem 5.6rem 10.35rem;
     position: relative;
     transition: all .235s ease-in-out;
-}
+} */
 
 /* HEADER AREA STYLES */
 .header {
